--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,17 @@ services:
   #   networks:
   #     - apex-network
 
+  setup_volumes:
+    build:
+      context: .
+      dockerfile: Dockerfile.setup
+    container_name: setup_volumes
+    volumes:
+      - nginx_config:/nginx_config
+      - apex_ords_config:/apex_ords_config
+    networks:
+      - apex-network
+
   cloudflare_tunnel-dev:
     image: cloudflare/cloudflared:latest
     container_name: cloudflare_tunnel
@@ -23,11 +34,14 @@ services:
      - 443:443
      - 80:80
     volumes:
-      - custom.conf:/etc/nginx/user_conf.d/custom.conf
+      - nginx_config:/etc/nginx/user_conf.d
       - nginx_secrets:/etc/letsencrypt
       - nginx_cache:/var/lib/nginx/cache
     networks:
       - apex-network
+    depends_on:
+      setup_volumes:
+        condition: service_completed_successfully
 
   apex_db:
     image: container-registry.oracle.com/database/express:21.3.0-xe
@@ -61,17 +75,27 @@ services:
     environment:
       - _JAVA_OPTIONS=-Xms256M -Xmx512M
       # - IGNORE_APEX=TRUE
+    command: >
+      sh -c "
+        cp /apex_ords_files/jetty-compression.xml /etc/ords/config/global/jetty-compression.xml
+        cp /apex_ords_files/settings.xml /etc/ords/config/global/settings.xml
+        cp /apex_ords_files/pool.xml /etc/ords/config/databases/default/pool.xml
+        exec /opt/oracle/runOrds.sh
+      "
     ports:
      - 8181:8181
     volumes:
-      - jetty-compression.xml:/etc/ords/config/global/jetty-compression.xml
-      - settings.xml:/etc/ords/config/global/settings.xml
-      - pool.xml:/etc/ords/config/databases/default/pool.xml
+      - type: volume
+        source: apex_ords_config
+        target: /apex_ords_files
+        read_only: true
       - ords_etc:/etc/ords/config
       - ords_variables:/opt/oracle/variables
     networks:
       - apex-network
     depends_on:
+      setup_volumes:
+        condition: service_completed_successfully
       apex_db:
         condition: service_healthy
 
@@ -98,6 +122,8 @@ volumes:
   ords_variables:
   nginx_secrets:
   nginx_cache:
+  nginx_config:
+  apex_ords_config:
 
 networks:
   apex-network:
