--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,13 @@ services:
       - nginx_cache:/var/lib/nginx/cache
     depends_on:
       - cloudflare_tunnel-dev
+    environment:
+      - CERTBOT_EMAIL=${CERTBOT_EMAIL}
+      - STAGING=0
+      - CERTBOT_AUTHENTICATOR=webroot
+      - CERTBOT_DNS_PROPAGATION_SECONDS=""
+      - DEBUG=0
+      - USE_LOCAL_CA=0
     networks:
       - apex-network
 
