--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - nginx_secrets:/etc/letsencrypt
       - nginx_cache:/var/lib/nginx/cache
+      - nginx_certbot_webroot:/var/www/certbot
     depends_on:
       - cloudflare_tunnel-dev
     environment:
@@ -102,6 +103,7 @@ volumes:
   nginx_secrets:
   nginx_cache:
   nginx_config:
+  nginx_certbot_webroot:
   # apex_ords_config:
 
 networks:
