--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,51 +32,49 @@ services:
     networks:
       - apex-network
 
-  # apex_db:
-  #   image: container-registry.oracle.com/database/express:21.3.0-xe
-  #   container_name: apex_db
-  #   restart: unless-stopped
-  #   environment:
-  #     - ORACLE_PWD=$APEX_DB_PASS
-  #     - ORACLE_CHARACTERSET=AL32UTF8
-  #   ports:
-  #    - 1521:1521
-  #   volumes:
-  #     - apex_data:/opt/oracle/oradata
-  #   networks:
-  #     - apex-network
-  #   healthcheck:
-  #     test: ["CMD-SHELL", "sqlplus -s sys/$APEX_DB_PASS@apex_db:1521/XEPDB1 <<< 'SELECT 1 FROM DUAL;'"]
-  #     interval: 10s
-  #     timeout: 10s
-  #     retries: 5
+  apex_db:
+    image: container-registry.oracle.com/database/express:21.3.0-xe
+    container_name: apex_db
+    restart: unless-stopped
+    environment:
+      - ORACLE_PWD=$APEX_DB_PASS
+      - ORACLE_CHARACTERSET=AL32UTF8
+    ports:
+     - 1521:1521
+    volumes:
+      - apex_data:/opt/oracle/oradata
+    networks:
+      - apex-network
+    healthcheck:
+      test: ["CMD-SHELL", "sqlplus -s sys/$APEX_DB_PASS@apex_db:1521/XEPDB1 <<< 'SELECT 1 FROM DUAL;'"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 
-  # apex_ords:
-  #   build:
-  #     context: ./services/apex_ords
-  #     dockerfile: Dockerfile
-  #     args:
-  #       APEX_DB_PASS: ${APEX_DB_PASS}
-  #       APEX_DB_SERVICE: apex_db
-  #   # image: ${APP_NAME}_apex_ords:latest
-  #   container_name: apex_ords
-  #   restart: unless-stopped
-  #   environment:
-  #     - _JAVA_OPTIONS=-Xms256M -Xmx512M
-  #     # - IGNORE_APEX=TRUE
-  #   ports:
-  #    - 8181:8181
-  #   volumes:
-  #     - type: volume
-  #       source: apex_ords_config
-  #       target: /apex_ords_files
-  #       read_only: true
-  #     - ords_etc:/etc/ords/config
-  #     - ords_variables:/opt/oracle/variables
-  #   networks:
-  #     - apex-network
-  #     apex_db:
-  #       condition: service_healthy
+  apex_ords:
+    build:
+      context: ./services/apex_ords
+      dockerfile: Dockerfile
+      args:
+        APEX_DB_PASS: ${APEX_DB_PASS}
+        APEX_DB_SERVICE: apex_db
+    # image: ${APP_NAME}_apex_ords:latest
+    container_name: apex_ords
+    restart: unless-stopped
+    environment:
+      - _JAVA_OPTIONS=-Xms256M -Xmx512M
+      # - IGNORE_APEX=TRUE
+    ports:
+     - 8181:8181
+    volumes:
+      - ./services/apex_ords/jetty-compression.xml:/etc/ords/config/global/jetty-compression.xml
+      - ./services/apex_ords/settings.xml:/etc/ords/config/global/settings.xml
+      - ords_etc:/etc/ords/config
+      - ords_variables:/opt/oracle/variables
+    networks:
+      - apex-network
+    apex_db:
+      condition: service_healthy
 
   # duplicati:
   #   image: linuxserver/duplicati:version-v2.0.8.1-2.0.8.1_beta_2024-05-07
@@ -96,13 +94,12 @@ services:
   #     - apex-network
 
 volumes:
-  # apex_data:
-  # ords_etc:
-  # ords_variables:
+  apex_data:
+  ords_etc:
+  ords_variables:
   nginx_secrets:
   nginx_cache:
   nginx_config:
-  # apex_ords_config:
 
 networks:
   apex-network:
