--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,8 +73,9 @@ services:
       - ords_variables:/opt/oracle/variables
     networks:
       - apex-network
-    apex_db:
-      condition: service_healthy
+    depends_on:
+      apex_db:
+        condition: service_healthy
 
   # duplicati:
   #   image: linuxserver/duplicati:version-v2.0.8.1-2.0.8.1_beta_2024-05-07
