--- a/services/nginx/custom.conf
+++ b/services/nginx/custom.conf
@@ -78,9 +78,9 @@ server {
     }
 
     # # Block access /ords/r/apex
-    location ~ ^/ords/r/apex/ {
-        return 403;
-    }
+    # location ~ ^/ords/r/apex/ {
+    #     return 403;
+    # }
 
     # # # Block access /ords/r/sql-developer
     location ~ ^/ords/sql-developer {
