--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: cloudflare/cloudflared:latest
     container_name: cloudflare_tunnel
     restart: unless-stopped
-    command: tunnel --no-autoupdate run --token ${CLOUDFLARED_TOKEN_DEV}
+    command: tunnel --no-autoupdate run --token ${CLOUDFLARED_TOKEN}
     networks:
       - apex-network
 
